tests/compile_fail/missing_external.out
In file included from tests/compile_fail/missing_external.cpp:14:
src/secureenumconverter.inc:8:6: error: #error "SEC_EXTERNAL not defined"
     #error "SEC_EXTERNAL not defined"
      ^~~~~
compilation terminated due to -Wfatal-errors.
